<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="40dp">

        <TableRow
            android:background="@color/colorGreen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:padding="10sp"
                android:textSize="14sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>

        <TableRow>
            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/row1Nama"
                    android:textColor="@android:color/black"
                    android:padding="10sp"
                    android:textSize="12sp"
                    android:layout_weight="4"
                    android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1IsiNama"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1kapasitas"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Isikapasitas"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1kode"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Isikode"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>


        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1gedung"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Isigedung"
                android:textColor="@android:color/black"
                android:padding="10sp"
                android:textSize="12sp"
                android:layout_weight="4"
                android:gravity="center_horizontal"/>
        </TableRow>
        </TableLayout>
</RelativeLayout>